<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>light-portal</groupId>
    <artifactId>user-management</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>
    <name>Parent POM</name>
    <description>User management</description>
    <url>https://github.com/networknt/light-portal-4j.git</url>

    <modules>
        <module>common</module>
        <module>jdbc</module>
        <module>auth</module>
        <module>usermanagement-service</module>
        <module>rest-command</module>
        <module>rest-query</module>
        <module>hybrid-service</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.light-4j>1.5.11</version.light-4j>
        <version.light-eventuate-4j>1.5.11</version.light-eventuate-4j>
        <version.light-hybrid-4j>1.5.11</version.light-hybrid-4j>
        <version.light-rest-4j>1.5.11</version.light-rest-4j>
        <version.kafka-clients>0.11.0.0</version.kafka-clients>
        <version.jackson>2.9.1</version.jackson>
        <version.slf4j>1.7.25</version.slf4j>
        <version.jose4j>0.6.1</version.jose4j>
        <version.encoder>1.2</version.encoder>
        <version.logback>1.1.7</version.logback>
        <version.junit>4.12</version.junit>
        <version.undertow>1.4.20.Final</version.undertow>
        <version.assertj>2.1.0</version.assertj>
        <version.hdrhistogram>2.1.8</version.hdrhistogram>
        <version.json-schema-validator>0.1.15</version.json-schema-validator>
        <version.hikaricp>2.7.1</version.hikaricp>
        <version.h2>1.3.176</version.h2>
        <version.javamail>1.4.7</version.javamail>
        <version.postgres>42.1.1</version.postgres>
        <version.mysql>6.0.6</version.mysql>

        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>light-portal</groupId>
                <artifactId>user-management-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>light-portal</groupId>
                <artifactId>user-management-jdbc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>light-portal</groupId>
                <artifactId>usermanagement-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>light-portal</groupId>
                <artifactId>usermanagement-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-ext</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>config</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>utility</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>security</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>health</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>audit</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>info</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>status</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>exception</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>mask</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>metrics</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>handler</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>registry</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>balance</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>cluster</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>consul</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>sanitizer</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>traceability</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>correlation</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>service</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>body</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>client</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>server</artifactId>
                <version>${version.light-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>swagger-meta</artifactId>
                <version>${version.light-rest-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>swagger-validator</artifactId>
                <version>${version.light-rest-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>swagger-security</artifactId>
                <version>${version.light-rest-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>eventuate-common</artifactId>
                <version>${version.light-eventuate-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>eventuate-event</artifactId>
                <version>${version.light-eventuate-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>eventuate-client</artifactId>
                <version>${version.light-eventuate-4j}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>eventuate-client-jdbc-common</artifactId>
                <version>${version.light-eventuate-4j}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${version.kafka-clients}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${version.json-schema-validator}</version>
            </dependency>

            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${version.hikaricp}</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>${version.javamail}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${version.h2}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${version.postgres}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>${basedir}/src/test/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.7</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
			</plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>2.14</version>
                    </dependency>
                </dependencies>
            </plugin>


            <!-- JACOCO added for code coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.4.201502262128</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- end JACOCO -->

        </plugins>
    </build>
</project>

